<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/white_darker"
        android:layout_height="match_parent">

        <ir.amozkade.advancedAsisstiveTouche.helper.customviews.ActionBar
            android:id="@+id/actionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:action_bar_title="@string/forgotPassword"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginRight="@dimen/paddingAllLayout2X"
            android:layout_marginLeft="@dimen/paddingAllLayout2X"
            app:layout_constraintVertical_bias="0.3"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfEmailCode"
                style="@style/simple_input_layout"
                android:nextFocusUp="@id/tfNewPassword">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/edit_text_inside_input_layout"
                    android:hint="@string/enter_email_verify_code"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfNewPassword"
                style="@style/simple_input_layout"
                android:layout_marginTop="@dimen/paddingAllLayout"
                android:nextFocusUp="@id/tfNewPasswordRepeat">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/edit_text_inside_input_layout"
                    android:hint="@string/enter_new_password" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfNewPasswordRepeat"
                style="@style/simple_input_layout"
                android:layout_marginTop="@dimen/paddingAllLayout"
                android:nextFocusUp="@id/btnResetPassword">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/edit_text_inside_input_layout"
                    android:hint="@string/enter_new_password_repeat" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnResetPassword"
                style="@style/primary_button"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:text="@string/reset_password"
                android:layout_marginTop="@dimen/paddingAllLayout"
                android:textAllCaps="false"
                tools:ignore="UnusedAttribute" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

